[package]
name = "rust-warp-jwt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "=7.2"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = "0.4"
mongodb = "2.8.0"
bcrypt = "0.8"
dotenv = "0.15.0"
envy = "0.4.2"

[profile.dev]
debug = 0

[profile.test]
debug = 0

[profile.release]
panic = 'abort'